# Chip-8-Emulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: chip8.c  chip8.h  main.c  menu.c  menu.h  platform_raylib.c  platform_raylib.h
